--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -4,6 +4,7 @@ on: [push, pull_request]
 
 env:
   CARGO_TERM_COLOR: always
+  DATABASE_URL: "postgres://postgres:password@localhost:5432/newsletter"
   SQLX_VERSION: 0.7.1
   SQLX_FEATURES: "rustls,postgres"
 
@@ -18,7 +19,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
-          POSTGRES_DB: postgres
+          POSTGRES_DB: newsletter
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -77,7 +78,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
-          POSTGRES_DB: postgres
+          POSTGRES_DB: newsletter
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -127,7 +128,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: password
-          POSTGRES_DB: postgres
+          POSTGRES_DB: newsletter
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
