--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -165,6 +165,8 @@ jobs:
       - name: Migrate database
         run: cargo sqlx migrate run
 
+      - name: Install cargo-tarpaulin
+        run: cargo install cargo-tarpaulin
+
       - name: Generate code coverage
-        run: |
-          cargo install cargo-tarpaulin && tarpaulin --verbose --workspace
+        run: cargo tarpaulin --verbose --workspace
