--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,9 @@ tracing-actix-web = "0.5"
 tracing-bunyan-formatter = "0.3"
 tracing-log = "0.1"
 tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
+unicode-segmentation = "1"
 uuid = { version = "0.8.1", features = ["v4"] }
+validator = "0.14"
 
 [dependencies.sqlx]
 version = "0.5.7"
@@ -33,6 +35,10 @@ default-features = false
 features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate" ]
 
 [dev-dependencies]
+claim = "0.5"
+fake = "~2.3"
+quickcheck = "0.9.2"
+quickcheck_macros = "0.9.1"
 reqwest = "*"
 
 [target.x86_64-unknown-linux-gnu]
