--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ actix-web = "4"
 chrono = "0.4.31"
 config = "0.11"
 once_cell = "1"
+reqwest = { version = "0.11", default-features = false, features = ["json", "rustls"] }
 secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
@@ -39,7 +40,9 @@ claim = "0.5"
 fake = "~2.3"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
-reqwest = "*"
+serde_json = "1"
+tokio = { version = "1", features = ["rt", "macros"] }
+wiremock = "0.5"
 
 [target.x86_64-unknown-linux-gnu]
 rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]
