--- a/configuration.yaml
+++ b/configuration.yaml
@@ -5,3 +5,8 @@ database:
   username: "postgres"
   password: "password"
   database_name: "newsletter"
+email_client:
+  base_url: "localhost"
+  sender_email: "test@gmail.com"
+  authorization_token: "my-secret-token"
+  timeout_millseconds: 10000
