--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "mig
 [dev-dependencies]
 claim = "0.5"
 fake = "~2.3"
+linkify = "0.8"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
 serde_json = "1"
