--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,9 +17,11 @@ actix-web = "4"
 chrono = "0.4.31"
 config = "0.11"
 once_cell = "1"
+rand = { version = "0.8", features=["std_rng"] }
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls"] }
 secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
+thiserror = "1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1", features = [ "log" ] }
 tracing-actix-web = "0.5"
