--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ name = "zero2prod"
 [dependencies]
 actix-web = "4"
 anyhow = "1"
+base64 = "0.13"
 chrono = "0.4.31"
 config = "0.11"
 once_cell = "1"
