--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ rand = { version = "0.8", features=["std_rng"] }
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls"] }
 secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
+sha3 = "0.9"
 thiserror = "1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1", features = [ "log" ] }
