--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ name = "zero2prod"
 [dependencies]
 actix-web = "4"
 anyhow = "1"
+argon2 = { version = "0.3", features = ["std"] }
 base64 = "0.13"
 chrono = "0.4.31"
 config = "0.11"
@@ -23,7 +24,6 @@ rand = { version = "0.8", features=["std_rng"] }
 reqwest = { version = "0.11", default-features = false, features = ["json", "rustls"] }
 secrecy = { version = "0.8", features = ["serde"] }
 serde = { version = "1", features = ["derive"] }
-sha3 = "0.9"
 thiserror = "1"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 tracing = { version = "0.1", features = [ "log" ] }
